Update a comment in network time test helper

BUG=684216

Review-Url: https://codereview.chromium.org/2930613002
Cr-Commit-Position: refs/heads/master@{#478031}

Former-commit-id: f397511c435587def5e9d55a2d26a23324f89956